# k4a-frame-extractor

./: .clang-format  .gitignore  CMakeLists.txt  README.md  k4a_frame_extraction.cpp  k4a_frame_extraction_helpers.cpp  main.cpp  pyproject.toml  transformation_helpers.cpp  transformation_helpers.h
body_tracking/: CMakeLists.txt  README.md  k4a_body_tracking.cpp  k4a_body_tracking_helpers.cpp  k4a_body_tracking_helpers.h
bt_offline_processor/: BodyTrackingHelpers.h  CMakeLists.txt  README.md  main.cpp
frame_extraction/: k4a_frame_extraction.cpp  k4a_frame_extraction_helpers.cpp  k4a_frame_extraction_helpers.h
notebooks/: 20220112_TimestampCorrection.ipynb  Convert_CSV_To_VMD_Format.ipynb  D08-1_Check_Sampling_Rate.ipynb  D08-2_LowConfidenceValues.ipynb  D08-3_PlotSkeletonSequence.ipynb  D08_Orientation.ipynb
